// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bud.assets should add job when passed an array of strings 1`] = `
Array [
  Object {
    "context": StringContaining "src",
    "from": StringContaining "images",
    "noErrorOnMissing": true,
    "to": StringContaining "dist/images/[path][name][ext]",
    "toType": "template",
  },
]
`;

exports[`bud.assets should add jobs when passed an array of tuples 1`] = `
Array [
  Object {
    "context": StringContaining "src",
    "from": StringMatching /tests\\\\/util\\\\/project\\\\/src\\\\/images\\$/,
    "noErrorOnMissing": true,
    "to": StringMatching /tests\\\\/util\\\\/project\\\\/dist\\\\/images\\$/,
    "toType": "template",
  },
  Object {
    "context": StringContaining "src",
    "from": StringMatching /tests\\\\/util\\\\/project\\\\/src\\\\/fonts\\\\/font\\.woff\\$/,
    "noErrorOnMissing": true,
    "to": StringMatching /tests\\\\/util\\\\/project\\\\/dist\\\\/fonts\\\\/font\\.woff\\$/,
    "toType": "template",
  },
]
`;

exports[`bud.assets should add jobs when passed an object 1`] = `
Object {
  "from": StringMatching /tests\\\\/util\\\\/project\\\\/src\\\\/images\\$/,
  "to": StringMatching /tests\\\\/util\\\\/project\\\\/dist\\\\/images\\$/,
}
`;
